src/test/deca/syntax/invalid/provided/class16.java
class A{
    int a;
    float b;

    while(true){
        a=1;
    }
}